--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SkillSpree</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>SkillSpree</h1>
+    </header>
+    <main>
+        <input type="text" id="searchBar" placeholder="Search for lessons...">
+        <section id="popularLessons">
+            <!-- Popular lessons will be listed here -->
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
