--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     </header>
     <main>
         <input type="text" id="searchBar" placeholder="Search for lessons...">
-        <section id="popularLessons">
-            <!-- Popular lessons will be listed here -->
+        <section id="lessons">
+            <h2>Available Lessons</h2>
+            <ul>
+                <li><a href="Mastering_the_Art_of_Baking_Bread.html">Mastering the Art of Baking Bread</a></li>
+                <!-- Add more lesson links here as you create them -->
+            </ul>
         </section>
     </main>
     <script src="script.js"></script>
